# telegram_bot_template

./: .gitignore  Makefile  README.md  docker-compose.yml
bot/: Dockerfile  admin.py  bot.py  cities.csv  client.py  make_migrations.sh  pyproject.toml
bot/alembic/: README  env.py
bot/alembic/versions/: 0fa87b0bd5f3_.py  82406fa62c95_create_user_table.py  89489f7efbb4_create_user_table.py  ecf84257431a_.py
bot/src/: manager.py  models.py  utils.py
grafana/: Dockerfile  grafana.ini
grafana/dashboards/: user_metrics.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
